--- a/package.json
+++ b/package.json
@@ -3,14 +3,29 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "server": "tsc-watch --onSuccess \"node --enable-source-maps --es-module-specifier-resolution=node dist/server/main.js\""
+    "test": "jest --config jestconfig.json",
+    "server": "tsc-watch --onSuccess \"node --enable-source-maps --es-module-specifier-resolution=node dist/server/main.js\"",
+    "build": "tsc && rollup --config",
+    "prepare": "yarn build",
+    "lint": "eslint src tests"
   },
+  "files": [
+    "dist/**/*"
+  ],
+  "main": "dist/index.cjs",
   "author": "Piotr Kaminski <piotr@lastolive.games>",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.34",
+    "@typescript-eslint/eslint-plugin": "^4.17.0",
+    "@typescript-eslint/parser": "^4.17.0",
     "eslint": "^7.22.0",
     "eslint-plugin-disable": "^2.0.1",
     "eslint-plugin-import": "^2.22.1",
+    "jest": "^26.6.3",
+    "rollup": "^2.41.2",
+    "ts-jest": "^26.5.3",
     "tsc-watch": "^4.2.9",
     "typescript": "^4.2.3"
   }
