--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,23 +8,20 @@
     "importsNotUsedAsValues": "error",
     /* more strict checking for errors that per-file transpilers like `esbuild` would crash */
     "isolatedModules": true,
-    "outDir": "./dist",
-    "rootDir": "./src",
+    "outDir": "./lib",
     /* Additional Options */
     "strict": true,
     "strictPropertyInitialization": false,
     "experimentalDecorators": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
     "useDefineForClassFields": true,
     // You can't currently define paths in your 'extends' config,
     // so we have to set 'baseUrl' & 'paths' here.
     // Don't change these unless you know what you're doing.
     // See: https://github.com/microsoft/TypeScript/issues/25430
-    "baseUrl": "./",
-    "typeRoots": ["web_modules/.types"]
-  },
-  "include": ["src", "tests"],
-  "exclude": ["node_modules"]
+    "baseUrl": "./"
+},
+  "include": ["src", "test"],
+  "exclude": ["node_modules"],
 }
