--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
     // See: https://github.com/microsoft/TypeScript/issues/25430
     "baseUrl": "./"
   },
-  "include": ["src", "test"],
+  "include": ["src", "tests"],
   "exclude": ["node_modules"]
 }
