--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "jest --config jestconfig.json",
     "perf": "tsc-watch --onSuccess \"node --enable-source-maps --es-module-specifier-resolution=node lib/tests/performance.test.js\"",
     "deopt": "rm *.log && node --trace-ic --enable-source-maps --es-module-specifier-resolution=node lib/tests/performance.test.js && mv *.log v8.pre.log && node striplog.cjs && deoptigate",
+    "flame": "clinic flame -- node --enable-source-maps --es-module-specifier-resolution=node lib/tests/performance.test.js",
     "build": "tsc && rollup --config",
     "prepare": "yarn build",
     "lint": "eslint src tests"
