--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
     "target": "esnext",
     "moduleResolution": "node",
     "sourceMap": true,
-    "allowSyntheticDefaultImports": true,
+    "declaration": true,
+    "declarationMap": true,
+    "allowUnusedLabels": true,
     "importsNotUsedAsValues": "error",
     /* more strict checking for errors that per-file transpilers like `esbuild` would crash */
     "isolatedModules": true,
