--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "type": "module",
   "version": "0.0.2",
   "scripts": {
-    "test": "jest --watch --config jestconfig.json tests/basic.test.ts",
-    "perf": "tsc-watch --onSuccess \"node --enable-source-maps --es-module-specifier-resolution=node lib/tests/performance.test.js\"",
+    "test": "jest --config jestconfig.json",
+    "test:watch": "jest --watch --config jestconfig.json",
+    "bench": "npm run build && env NODE_ENV=test node --expose-gc --enable-source-maps --es-module-specifier-resolution=node lib/benchmarks/index.js",
+    "bench:watch": "tsc-watch --onSuccess \"env NODE_ENV=test node --expose-gc --enable-source-maps --es-module-specifier-resolution=node lib/benchmarks/index.js\"",
     "deopt": "rm *.log && node --trace-ic --enable-source-maps --es-module-specifier-resolution=node lib/tests/performance.test.js && mv *.log v8.pre.log && node striplog.cjs && deoptigate",
     "flame": "clinic flame -- node --enable-source-maps --es-module-specifier-resolution=node lib/tests/performance.test.js",
-    "build": "rollup --config",
+    "build": "rollup --config && cp index.* perf.* lib",
     "prepublishOnly": "yarn build",
-    "lint": "eslint src tests"
+    "lint": "eslint src tests benchmarks"
   },
   "files": [
     "index.*",
@@ -22,6 +24,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^26.0.20",
+    "@types/ms": "^0.7.31",
     "@types/node": "^14.14.34",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
@@ -30,6 +33,7 @@
     "eslint-plugin-disable": "^2.0.1",
     "eslint-plugin-import": "^2.22.1",
     "jest": "^26.6.3",
+    "ms": "^2.1.3",
     "rollup": "^2.41.2",
     "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "^26.5.3",
