--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "scripts": {
     "test": "jest --config jestconfig.json",
     "test:watch": "jest --watch --config jestconfig.json",
-    "bench": "npm run build && env NODE_ENV=test node --expose-gc --enable-source-maps --es-module-specifier-resolution=node lib/benchmarks/index.js",
+    "bench": "rollup --config rollup.benchmarks.config.mjs && cp index.* perf.* lib && env NODE_ENV=test node --expose-gc --enable-source-maps --es-module-specifier-resolution=node lib/benchmarks/index.js",
     "bench:watch": "tsc-watch --onSuccess \"env NODE_ENV=test node --expose-gc --enable-source-maps --es-module-specifier-resolution=node lib/benchmarks/index.js\"",
     "deopt": "rm *.log && node --trace-ic --enable-source-maps --es-module-specifier-resolution=node lib/tests/performance.test.js && mv *.log v8.pre.log && node striplog.cjs && deoptigate",
     "flame": "clinic flame -- node --enable-source-maps --es-module-specifier-resolution=node lib/tests/performance.test.js",
-    "build": "rollup --config && cp index.* perf.* lib",
+    "build": "rollup --config",
     "prepublishOnly": "yarn build",
     "lint": "eslint src tests benchmarks"
   },
