--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "type": "module",
   "version": "0.3.0",
   "scripts": {
-    "test": "jest --config jestconfig.json",
-    "test:watch": "jest --watch --config jestconfig.json",
+    "test": "jest --config jestconfig.json --detectOpenHandles",
+    "test:watch": "jest --watch --config jestconfig.json --detectOpenHandles",
     "bench": "rollup --config rollup.benchmarks.config.mjs && cp index.* perf.* lib && env NODE_ENV=test node --expose-gc --enable-source-maps --es-module-specifier-resolution=node lib/benchmarks/index.js",
     "bench:watch": "tsc-watch --onSuccess \"env NODE_ENV=test node --expose-gc --enable-source-maps --es-module-specifier-resolution=node lib/benchmarks/index.js\"",
     "deopt": "rm *.log && node --trace-ic --enable-source-maps --es-module-specifier-resolution=node lib/tests/performance.test.js && mv *.log v8.pre.log && node striplog.cjs && deoptigate",
