--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lastolivegames/becsy",
   "type": "module",
-  "version": "0.8.0",
+  "version": "0.8.1",
   "scripts": {
     "test": "jest --config jestconfig.json --detectOpenHandles",
     "test:watch": "jest --watch --config jestconfig.json --detectOpenHandles",
@@ -10,7 +10,8 @@
     "flame": "clinic flame -- node --enable-source-maps --es-module-specifier-resolution=node lib/tests/performance.test.js",
     "build": "rollup --config",
     "prepublishOnly": "yarn build",
-    "lint": "eslint src tests benchmarks"
+    "lint": "eslint src tests benchmarks",
+    "update": "yarn upgrade-interactive --latest"
   },
   "files": [
     "index.*",
@@ -28,7 +29,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.20",
     "@types/ms": "^0.7.31",
-    "@types/node": "^14.14.34",
+    "@types/node": "^16.9.1",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
     "@wessberg/rollup-plugin-ts": "^1.3.11",
