--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 /index.*
 /perf.*
 /lib/
-/node_modules/
+node_modules/
 /benchmarks/current_results.json
+/examples/dist/
 
 /.gitconfig
 /.vscode/
