--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "build": "rollup --config",
     "prepublishOnly": "yarn build",
     "lint": "eslint src tests benchmarks",
-    "update": "yarn upgrade-interactive --latest"
+    "update": "yarn upgrade-interactive --latest",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:serve": "vitepress serve docs"
   },
   "files": [
     "index.*",
@@ -38,10 +41,12 @@
     "eslint-plugin-disable": "^2.0.1",
     "eslint-plugin-import": "^2.25.2",
     "jest": "^27.3.1",
+    "markdown-it-container": "^3.0.0",
     "rollup": "^2.58.0",
     "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "^27.0.7",
     "tsc-watch": "^4.2.9",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "vitepress": "^0.22.2"
   }
 }
