--- a/jestconfig.json
+++ b/jestconfig.json
@@ -1,19 +1,15 @@
 {
   "testEnvironment": "node",
   "transform": {
-    "^.+\\.ts?$": "ts-jest"
+    "^.+\\.ts?$": ["ts-jest", {
+      "tsconfig": "./tsconfig.jest.json",
+      "diagnostics": {"ignoreCodes": [151001]}
+    }]
   },
   "testRegex": "(/tests/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
   "testPathIgnorePatterns": ["<rootDir>/node_modules/", "<rootDir>/lib/"],
   "moduleFileExtensions": [
     "ts",
     "js"
-  ],
-  "globals": {
-    "ts-jest": {
-      "diagnostics": {
-        "ignoreCodes": [151001]
-      }
-    }
-  }
+  ]
 }
