--- a/package.json
+++ b/package.json
@@ -31,23 +31,23 @@
   "author": "Piotr Kaminski <piotr@lastolive.games>",
   "license": "MIT",
   "devDependencies": {
-    "@types/jest": "^28.0.0",
-    "@types/ms": "^0.7.31",
-    "@types/node": "^12.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.1.0",
-    "@typescript-eslint/parser": "^5.1.0",
-    "chalk": "^4.1.2",
-    "eslint": "^8.1.0",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@types/jest": "^29.5.8",
+    "@types/ms": "^0.7.34",
+    "@types/node": "^20.9.0",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
+    "chalk": "^5.3.0",
+    "eslint": "^8.53.0",
     "eslint-plugin-disable": "^2.0.1",
-    "eslint-plugin-import": "^2.25.2",
-    "jest": "^28.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "jest": "^29.7.0",
     "markdown-it-container": "^3.0.0",
-    "rollup": "^2.58.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-ts": "^3.0.0",
-    "ts-jest": "^28.0.8",
-    "tsc-watch": "^5.0.3",
-    "typescript": "^4.4.4",
+    "rollup": "^4.3.1",
+    "rollup-plugin-ts": "^3.4.5",
+    "ts-jest": "^29.1.1",
+    "tsc-watch": "^6.0.4",
+    "typescript": "^5.2.2",
     "vitepress": "^0.22.4"
   }
 }
