Upgrade to Vitepress 1.x

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ node_modules/
 /benchmarks/current_results.json
 /examples/dist/
 /docs/.vitepress/dist/
+/docs/.vitepress/cache/
 
 /.gitconfig
 /.vscode/
