--- a/package.json
+++ b/package.json
@@ -48,6 +48,6 @@
     "ts-jest": "^29.1.1",
     "tsc-watch": "^6.0.4",
     "typescript": "^5.2.2",
-    "vitepress": "^0.22.4"
+    "vitepress": "1.x"
   }
 }
