--- a/package.json
+++ b/package.json
@@ -5,25 +5,26 @@
   "scripts": {
     "test": "jest --config jestconfig.json --detectOpenHandles",
     "test:watch": "jest --watch --config jestconfig.json --detectOpenHandles",
-    "perf": "rollup --config rollup.benchmarks.config.mjs && cp index.* perf.* lib && tsc && env NODE_ENV=test node --expose-gc --enable-source-maps --no-warnings --es-module-specifier-resolution=node lib/benchmarks/index.js",
+    "perf": "rollup --config rollup.benchmarks.config.mjs && tsc && env NODE_ENV=test node --expose-gc --enable-source-maps --no-warnings --es-module-specifier-resolution=node lib/benchmarks/index.js",
     "deopt": "rm *.log && node --trace-ic --enable-source-maps --es-module-specifier-resolution=node lib/tests/performance.test.js && mv *.log v8.pre.log && node striplog.cjs && deoptigate",
     "flame": "clinic flame -- node --enable-source-maps --es-module-specifier-resolution=node lib/tests/performance.test.js",
     "build": "rollup --config",
     "prepublishOnly": "yarn build",
     "release": "node build/release.js",
-    "lint": "eslint src tests benchmarks",
+    "lint": "eslint src tests benchmarks eslint.config.mjs",
     "update": "yarn upgrade-interactive --latest",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:serve": "vitepress serve docs"
   },
   "files": [
-    "index.*",
-    "perf.*",
+    "lib/index.*",
+    "lib/perf.*",
     "src"
   ],
-  "main": "index.umd.js",
-  "module": "index.js",
+  "main": "lib/index.umd.js",
+  "module": "lib/index.js",
+  "types": "lib/index.d.ts",
   "engines": {
     "node": ">=12"
   },
@@ -31,23 +32,25 @@
   "author": "Piotr Kaminski <piotr@lastolive.games>",
   "license": "MIT",
   "devDependencies": {
+    "@microsoft/api-extractor": "^7.51.1",
     "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^12.1.2",
     "@types/jest": "^29.5.8",
-    "@types/ms": "^0.7.34",
-    "@types/node": "^20.9.0",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
+    "@types/ms": "^2.1.0",
+    "@types/node": "^22.13.8",
     "chalk": "^5.3.0",
-    "eslint": "^8.53.0",
-    "eslint-plugin-disable": "^2.0.1",
-    "eslint-plugin-import": "^2.29.0",
+    "eslint": "^9.21.0",
+    "eslint-import-resolver-typescript": "^3.8.3",
+    "eslint-plugin-import": "^2.31.0",
+    "globals": "^16.0.0",
     "jest": "^29.7.0",
-    "markdown-it-container": "^3.0.0",
+    "markdown-it-container": "^4.0.0",
     "rollup": "^4.3.1",
-    "rollup-plugin-ts": "^3.4.5",
     "ts-jest": "^29.1.1",
     "tsc-watch": "^6.0.4",
+    "tslib": "^2.8.1",
     "typescript": "^5.2.2",
+    "typescript-eslint": "^8.25.0",
     "vitepress": "1.x"
   }
 }
